Q_DISABLE_COPY is inherited from QObject

--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,29 @@ Makefile*
 *.prl
 doxygen.cfg
 doc/
+.qmake.stash
+
+tests/target_wrapper.sh
+tests/test_ofonocallbarring
+tests/test_ofonocallforwarding
+tests/test_ofonocallmeter
+tests/test_ofonocallsettings
+tests/test_ofonocallvolume
+tests/test_ofonocellbroadcast
+tests/test_ofonoconnman
+tests/test_ofonoconnmancontext
+tests/test_ofonointerface
+tests/test_ofonomessagemanager
+tests/test_ofonomessagewaiting
+tests/test_ofonomodem
+tests/test_ofonomodeminterface
+tests/test_ofonomodemmanager
+tests/test_ofonomultipartycall
+tests/test_ofononetworkoperator
+tests/test_ofononetworkregistration
+tests/test_ofonophonebook
+tests/test_ofonoradiosettings
+tests/test_ofonosimmanager
+tests/test_ofonosupplementaryservices
+tests/test_ofonovoicecall
+tests/test_ofonovoicecallmanager
